# agentfiles

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  commands.rs  git.rs  installer.rs  lib.rs  main.rs  manifest.rs  provider.rs  scanner.rs  types.rs
src/agentfiles/: __init__.py  manifest.py  types.py
src/agentfiles/installers/: claude_code.py  protocol.py
