[package]
name = "agentfiles"
version = "0.0.1"
edition = "2024"
description = "Unified agent file installer for Claude Code, OpenCode, Codex, and Cursor"
license = "MIT"
repository = "https://github.com/leodiegues/agentfiles"
homepage = "https://github.com/leodiegues/agentfiles"
readme = "README.md"
keywords = ["cli", "agents", "skills", "ai", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
dirs = "6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3"
