[project]
name = "agentfiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leo Diegues", email = "leonardo.diegues@grupofolha.com.br" }
]
requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.5.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
